--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,177 @@
-@charset "utf-8";
+@charset "UTF-8";
+/* ============ 共通 ============ */
+
+body {
+  font-family: sans-serif;
+  color: #333;
+}
+img {
+  max-width: 100%;
+}
+.inner {
+  max-width: 1100px;
+  margin: 0 auto;
+
+}
+
+/* ============ ヘッダー ============ */
+.header {
+  background: #fff;
+  padding: 15px 0;
+}
+
+.header__content {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo i {
+  color: #777;
+  font-size: 45px;
+  display: block;
+}
+
+.btn-contact {
+  background-color: #6ba7eb;
+  color: #fff;
+  font-size: 12px;
+  padding: 12px 14px;
+  text-decoration: none;
+  display: block;
+}
+
+
+/* ============ KV ============ */
+.kv {
+  background: url("/Users/mutsuki/html/lp-practice/img/keyvisual/keyvisual.jpg") no-repeat center/cover;
+  height: 935px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+.kv h1 {
+  font-size: 65px;
+  font-weight: 700;
+  color: #3a88eb;
+}
+.kv p {
+  font-size: 40px;
+  font-weight: 700;
+  color: #fff;
+  margin-top: 30px;
+}
+
+/* ============ WORK ============ */
+.work {
+  background: #e3f2fd;
+  padding-top: 50px;
+}
+.work__content {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
+.work__img {
+  width: 250px;
+  flex-shrink: 0;
+}
+
+.work__img img {
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+
+.work__text {
+  display: flex;
+  flex-direction: column;
+  padding-left: 30px;
+  text-align: center;
+}
+
+.work__text h2 {
+  font-size: 40px;
+  letter-spacing: 10px;
+  margin-bottom: 35px;
+}
+.work__text p {
+  font-size: 15px;
+  line-height: 18px;
+  word-break: break-all;
+}
+
+/* ============ SKILLS ============ */
+.skills {
+  background: #fff;
+  padding-top: 50px ;
+  padding-bottom: 70px;
+  text-align: center;
+}
+.skills h2 {
+  font-size: 40px;
+  letter-spacing: 10px;
+  margin-bottom: 50px;
+}
+.skills__grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 100px;
+}
+.skills__grid img {
+  width: 300px;
+  height: 300px;
+}
+
+/* ============ PLAN ============ */
+.plan {
+  background: #d0dfea;
+  padding: 50px 0 ;
+  text-align: center;
+}
+.plan h2 {
+  font-size: 40px;
+  letter-spacing: 10px;
+  margin-bottom: 50px;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background: #fff;
+}
+th, td {
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+thead th {
+  background: #007bff;
+}
+
+/* ============ SNS ============ */
+.sns {
+  background: #e3f2fd;
+  padding: 200px 0 ;
+}
+.sns ul {
+  display: flex;
+  justify-content: center;
+  gap: 145px;
+  font-size: 40px;
+  color: #8c8c8c;
+  list-style: none;
+}
+
+/* ============ FOOTER ============ */
+footer {
+  background: #cfd8dc;
+  padding: 20px 0;
+  font-size: 10px;
+  letter-spacing: 0.5px;
+  text-align: right;
+  padding-right: 180px;
+}
