--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ img {
 
 /* ============ KV ============ */
 .kv {
-  background: url("../img/kv/kv.jpg") no-repeat center/cover;
+  background: url("../img/keyvisual/keyvisual.jpg") no-repeat center/cover;
   height: 935px;
   display: flex;
   justify-content: center;
